--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "backend-ia",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
-  "author": "",
+  "author": "Michael Zabala (Mike)",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow-models/knn-classifier": "^1.2.2",
     "@tensorflow/tfjs": "^2.7.0",
     "@tensorflow/tfjs-node": "^2.7.0",
     "axios": "^0.21.0",
@@ -21,5 +22,15 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/phreakphreak/backend-ia.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/phreakphreak/backend-ia/issues"
+  },
+  "homepage": "https://github.com/phreakphreak/backend-ia#readme",
+  "description": ""
 }
